# public_projects

./: OBI_Downloads.py  advanced_recorder.py  auto_dj.py  biweekly_data_push_v3.py  hollander.py
Dictionary_Analysis/: .coverage  DESIGN.md  README.md  api_calls.json  config.txt  dictionary_pull.py  etymology_dict.json  keys.txt  runme.py  setup.py  test.py
Dictionary_Analysis/record_keeping/: api_calls.json  cleaned_dict.json  etymology_dict.json  language.txt  unknown_words.txt
Dictionary_Analysis/setup/: example_response.json  setup.py
Dictionary_Analysis/src/: data_cleanse.py  data_vis.py  dictionary_pull  dictionary_pull.py  helper.py  local_data_pull.py  local_data_push.py  sync_files.py  test.py
ERP_Data_Engineering/: .gitignore  README.md  salesforce_data_pull.py
ERP_Data_Engineering/keys/: obi_pw.txt  obi_user.txt  sf_key.txt  sf_pw.txt  sf_user.txt
ERP_Data_Engineering/src/: OBI_Downloads.py  check_downloads.py  helper.py  (+1 more)
FireArms_Analysis/: Firearms_Data.py  README.md
hor_analysis_tool/: .gitignore  .gitlab-ci.yml  Design.md  README.md  file_upload.html  pyproject.toml
hor_analysis_tool/keys/: api_example.txt  email_template.json  pat_example.txt
hor_analysis_tool/requirements/: requirements.txt
hor_analysis_tool/source_documents/: 2025-03-05_111_driving_distances.csv  2025-03-12_111_driving_distances.csv  2025-03-23_111_driving_distances.csv  2025-09-10_111_driving_distances.csv  HOR_template.csv
hor_analysis_tool/src/: download_file.py  driving_distance.py  helper.py  ingest_data.py
hor_analysis_tool/tests/: ingest_data_test.py
(+60 files in other folders)
